--- a/assets/css/card_post_detailed.css
+++ b/assets/css/card_post_detailed.css
@@ -178,8 +178,8 @@
   position: absolute;
   top: 0;
   left: 0;
-  width: 100%;
-  height: 100%;
+  right: 0;
+  bottom: 0;
   border: none !important;
 }
 
