--- a/_includes/layout_link_css_pre.html
+++ b/_includes/layout_link_css_pre.html
@@ -1,18 +1,25 @@
+<!-- External -->
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
+<!-- Main -->
 <link rel="stylesheet" href="{{ site.url }}{{ site.path.css }}/main.css">
 <link rel="stylesheet" href="{{ site.url }}{{ site.path.css }}/syntax.css">
-
 <link rel="stylesheet" href="{{ site.url }}{{ site.path.css }}/highlighter.css">
 <link rel="stylesheet" href="{{ site.url }}{{ site.path.css }}/footer.css">
 <link rel="stylesheet" href="{{ site.url }}{{ site.path.css }}/centered.css">
 
+<!-- Theme -->
+<!-- <link rel="stylesheet" href="{{ site.url }}{{ site.path.css }}/dark.css"> -->
+<link rel="stylesheet" href="{{ site.url }}{{ site.path.css }}/light.css">
+
+<!-- Plugin -->
 <link rel="stylesheet" href="{{ site.url }}{{ site.path.css }}/music_player.css">
 <link rel="stylesheet" href="{{ site.url }}{{ site.path.css }}/video.css">
 <link rel="stylesheet" href="{{ site.url }}{{ site.path.css }}/button_round.css">
 <link rel="stylesheet" href="{{ site.url }}{{ site.path.css }}/button_animated.css">
 <link rel="stylesheet" href="{{ site.url }}{{ site.path.css }}/window_mac.css">
 <link rel="stylesheet" href="{{ site.url }}{{ site.path.css }}/window_old_mac.css">
+<link rel="stylesheet" href="{{ site.url }}{{ site.path.css }}/blockquote_layer.css">
 <link rel="stylesheet" href="{{ site.url }}{{ site.path.css }}/image_frame.css">
 <link rel="stylesheet" href="{{ site.url }}{{ site.path.css }}/image_overlay.css">
 <link rel="stylesheet" href="{{ site.url }}{{ site.path.css }}/image_overlay_box.css">
@@ -36,7 +43,7 @@
 <link rel="stylesheet" href="{{ site.url }}{{ site.path.css }}/card_profile_bubble.css">
 <link rel="stylesheet" href="{{ site.url }}{{ site.path.css }}/card_profile_drop_icons.css">
 <link rel="stylesheet" href="{{ site.url }}{{ site.path.css }}/card_profile_quotes.css">
-<link rel="stylesheet" href="{{ site.url }}{{ site.path.css }}/blockquote_layer.css">
+
 {% for css in page.prelink_css %}
 <link rel="stylesheet" href="{{ css }}">
 {% endfor %}
