--- a/assets/css/card_post_detailed.css
+++ b/assets/css/card_post_detailed.css
@@ -175,7 +175,7 @@
 }
 
 .card-post-detailed a.link {
-  position: absolute;
+  position: relative;
   top: 0;
   left: 0;
   right: 0;
@@ -195,4 +195,5 @@
   -moz-box-sizing: border-box;
   box-sizing: border-box;
   float: left;
+  overflow: hidden;
 }
