--- a/_includes/layout_nav.html
+++ b/_includes/layout_nav.html
@@ -4,7 +4,6 @@
 	  svg.i-holdcat {
 	    height: 14px;
 	    width: auto;
-			fill: #fff;
 			padding: 0;
 			margin: 0;
 	  }
@@ -13,6 +12,14 @@
 		}
 		.site-navigation-svg-span-right {
 			margin-left: 5px;
+		}
+
+		.dark svg.i-holdcat {
+			fill: #fff;
+		}
+
+		.light svg.i-holdcat {
+			fill: #000;
 		}
 	</style>
 	<nav class="site-navigation" itemscope itemtype="https://schema.org/SiteNavigationElement">
