--- a/assets/css/card_post_detailed.css
+++ b/assets/css/card_post_detailed.css
@@ -91,7 +91,7 @@
 .post-module .post-content {
   position: absolute;
   bottom: 0;
-  background: #FFFFFF;
+  background: #fafafa;
   width: 100%;
   padding: 30px;
   -webkti-box-sizing: border-box;
