--- a/assets/css/light.css
+++ b/assets/css/light.css
@@ -249,3 +249,17 @@
   background-color: var(--light-nav-bg-color--active);;
   color: #fff
 }
+
+.dark .form[role="search"] label {
+  color: var(--light-link-color);
+}
+
+.dark .form[role="search"] .form-control {
+  color: var(--trim-color);
+}
+
+.dark .form[role="search"] .form-control:focus,
+.dark .form[role="search"] .form-control:hover,
+.dark .form[role="search"] .form-control:target {
+  color: var(--trim-color);
+}
