--- a/assets/css/light.css
+++ b/assets/css/light.css
@@ -250,16 +250,16 @@
   color: #fff
 }
 
-.dark .form[role="search"] label {
+.light .form[role="search"] label {
   color: var(--light-link-color) !important;
 }
 
-.dark .form[role="search"] .form-control {
+.light .form[role="search"] .form-control {
   color: var(--trim-color) !important;
 }
 
-.dark .form[role="search"] .form-control:focus,
-.dark .form[role="search"] .form-control:hover,
-.dark .form[role="search"] .form-control:target {
+.light .form[role="search"] .form-control:focus,
+.light .form[role="search"] .form-control:hover,
+.light .form[role="search"] .form-control:target {
   color: var(--trim-color) !important;
 }
