--- a/_includes/card_post_detailed.html
+++ b/_includes/card_post_detailed.html
@@ -1,6 +1,7 @@
 <div class="card-post-detailed" style="{% if include.maxwidth.size > 0 %}max-width: {{ include.maxwidth }} !important;{% endif %}">
   <!-- Post-->
   <div class="post-module">
+    {% if include.href.size > 0 %}<a class="link" href="{{ include.href }}">{% endif %}
     <!-- Thumbnail-->
     <div class="thumbnail">
       <div class="date">
@@ -17,6 +18,6 @@
       <p class="description">{{ include.desc }}</p>
       <div class="post-meta"><span class="timestamp"><i class="fa fa-clock-o"></i>&nbsp;{{ include.date }}</span></div>
     </div>
+    {% if include.href.size > 0 %}</a>{% endif %}
   </div>
-  {% if include.href.size > 0 %}<a class="link" href="{{ include.href }}"></a>{% endif %}
 </div>
