--- a/_includes/image_overlay_fade_detailed.html
+++ b/_includes/image_overlay_fade_detailed.html
@@ -1,6 +1,6 @@
 <figure class="overlay-image-fade-detailed" style="{% if include.maxwidth.size > 0 %}max-width: {{ include.maxwidth }} !important;{% endif %}">
   <img src="{{ include.image }}" />
-  <figcaption>
+  <figcaption class="{{ include.position | default: 'top' }}"><!-- top/bottom -->
     <h2>{{ include.title }}</h2>
     <p>{{ include.desc }}</p>
   </figcaption>
