--- a/assets/css/image_overlay_fade_detailed.css
+++ b/assets/css/image_overlay_fade_detailed.css
@@ -29,15 +29,21 @@ figure.overlay-image-fade-detailed img {
 
 figure.overlay-image-fade-detailed figcaption {
   position: absolute;
-  /* bottom: calc(0% - 1px); */
-  bottom: calc(100% + 1px);
   left: 0;
   width: 100%;
   z-index: 1;
-  /* -webkit-transform: translateY(calc(100% + 1px));
-  transform: translateY(calc(100% + 1px)); */
+}
+
+figure.overlay-image-fade-detailed figcaption.bottom {
+  bottom: calc(0% - 1px);
   -webkit-transform: translateY(calc(100% + 1px));
   transform: translateY(calc(100% + 1px));
+}
+
+figure.overlay-image-fade-detailed figcaption.top {
+  top: 0;
+  -webkit-transform: translateY(calc(-100%));
+  transform: translateY(calc(-100%));
 }
 
 figure.overlay-image-fade-detailed h2,
