--- a/assets/css/image_overlay_camera.css
+++ b/assets/css/image_overlay_camera.css
@@ -25,6 +25,7 @@ figure.overlay-image-camera img {
   max-width: 100%;
   position: relative;
   opacity: 0.75;
+  display: block;
 }
 
 figure.overlay-image-camera figcaption {
