--- a/assets/css/image_overlay_fade_detailed.css
+++ b/assets/css/image_overlay_fade_detailed.css
@@ -41,10 +41,18 @@ figure.overlay-image-fade-detailed figcaption.bottom {
   transform: translateY(calc(100% + 1px));
 }
 
+figure.overlay-image-fade-detailed figcaption.bottom h2 {
+  bottom: 100%;
+}
+
 figure.overlay-image-fade-detailed figcaption.top {
-  top: 100%;
+  top: 0;
   -webkit-transform: translateY(calc(-100%));
   transform: translateY(calc(-100%));
+}
+
+figure.overlay-image-fade-detailed figcaption.top h2 {
+  top: 100%;
 }
 
 figure.overlay-image-fade-detailed h2,
@@ -57,7 +65,6 @@ figure.overlay-image-fade-detailed p {
 figure.overlay-image-fade-detailed h2 {
   color: #ffffff;
   position: absolute;
-  bottom: 100%;
   display: inline-block;
   font-weight: 400;
   text-transform: uppercase;
