--- a/_includes/layout_search.html
+++ b/_includes/layout_search.html
@@ -1,4 +1,4 @@
-	{% if site.show_search %}
+	{% if site.ui.show_search %}
 	<!-- <form role="search" name="search" autocomplete="on" class="form" action="https://google.com/search" method="get">
 		<label class="help-block">
 			<input type="hidden" name="sitesearch" value="{{ site.url }}" />
