--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -28,7 +28,7 @@ layout: null
     -->
 </head>
 
-<body class="hack {{ site.theme }} main container"{% if page.on_load.call.size > 0 %} onload="{{ page.on_load.call }}"{% endif %}>
+<body class="hack {{ site.ui.theme }} main container"{% if page.on_load.call.size > 0 %} onload="{{ page.on_load.call }}"{% endif %}>
 
   {% unless page.disable_nav == true %}
   {% include layout_nav.html %}
