--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -882,6 +882,27 @@ body>footer p.muted {
   }
 }
 
+blockquote {
+  position: relative;
+  padding-left: 3rem;
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+  padding-right: 1rem;
+  overflow: hidden;
+  background-color: var(--atomone-gray);
+}
+
+blockquote:before {
+  /* content: ">\A>\A>\A>\A>\A>\A>\A>\A>\A>\A>\A>\A>\A>\A>\A>\A>\A>\A>\A>\A>\A>\A>\A>\A>\A>\A>\A>\A>\A>\A>\A>\A>\A>\A>\A>\A>\A>\A>\A>\A>\A>\A>\A>\A>\A>\A>\A>\A>\A>\A>\A>\A>\A>\A>\A>\A>\A>\A>\A>\A>\A>\A>\A>\A>\A>\A>\A>\A>\A>\A>\A>\A>\A>\A>\A>\A>\A>\A>\A>\A>\A>\A>\A>\A>\A>\A>\A>\A>\A>\A>\A>\A>\A>\A>\A>\A>\A>\A>\A>"; */
+  content: '“';
+  white-space: pre;
+  position: absolute;
+  top: 1.5rem;
+  left: 0.5rem;
+  line-height: 20px;
+  font-size: 3rem;
+}
+
 blockquote cite {
   display: block
 }
