--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -838,7 +838,8 @@ select.form-control {
   position: relative;
   padding-bottom: 56.25%;
   padding-top: 25px;
-  height: 0
+  height: 0;
+  margin: 0 auto;
 }
 
 .responsive-iframe iframe,
