--- a/_includes/layout_link_css_pre.html
+++ b/_includes/layout_link_css_pre.html
@@ -15,6 +15,8 @@
 <!-- Plugin -->
 <link rel="stylesheet" href="{{ site.url }}{{ site.path.css }}/music_player.css">
 <link rel="stylesheet" href="{{ site.url }}{{ site.path.css }}/video.css">
+<link rel="stylesheet" href="{{ site.url }}{{ site.path.css }}/alert.css">
+<link rel="stylesheet" href="{{ site.url }}{{ site.path.css }}/toc.css">
 <link rel="stylesheet" href="{{ site.url }}{{ site.path.css }}/keyboard.css">
 <link rel="stylesheet" href="{{ site.url }}{{ site.path.css }}/button_round.css">
 <link rel="stylesheet" href="{{ site.url }}{{ site.path.css }}/button_animated.css">
