--- a/_includes/detailed.html
+++ b/_includes/detailed.html
@@ -1,6 +1,6 @@
 {% capture detailed_title %}{{ include.title }}{% endcapture %}
 {% capture detailed_contents %}{{ include.contents }}{% endcapture %}
-<details style="background-color: var(--atomone-gray); padding: 1rem 2rem; margin: 1rem 0; border-radius: 3px;">
+<details class="detailed-content">
   <summary class="detailed_title">{{ detailed_title }}</summary>
 	<figure class="detailed_contents" style="padding-top: 1rem;">
 		{{ detailed_contents }}
