--- a/_includes/signature.html
+++ b/_includes/signature.html
@@ -1,5 +1,5 @@
 <!-- START POST SIGNATURE -->
 <div class="sign" style="height: 128px !important;">
-	<img alt="Señorita" src="{{ site.url }}{{ site.path.images }}/sign_{{ site.ui.theme }}.png" style="float: right !important; width: 256px !important; max-width: 100% !important;">
+	<img alt="Señorita" src="{{ site.url }}{{ site.path.images }}/sign_{{ site.ui.theme_reversed }}.png" style="float: right !important; width: 256px !important; max-width: 100% !important;">
 </div>
 <!-- END POST SIGNATURE -->
