--- a/assets/css/card_profile_drop_icons.css
+++ b/assets/css/card_profile_drop_icons.css
@@ -71,6 +71,7 @@
 
 .drop-icons-profile-card .icons a {
   display: inline-block;
+  border: none !important;
 }
 
 .drop-icons-profile-card .icons i {
