--- a/assets/css/card_profile_quotes.css
+++ b/assets/css/card_profile_quotes.css
@@ -8,9 +8,16 @@ figure.quotes-profile-card {
   min-width: 220px;
   max-width: 310px;
   width: 100%;
-  color: #333;
   text-align: left;
   box-shadow: none !important;
+}
+
+.dark figure.quotes-profile-card {
+  color: #333;
+}
+
+.dark figure.quotes-profile-card {
+  color: #ccc;
 }
 
 figure.quotes-profile-card * {
@@ -35,13 +42,20 @@ figure.quotes-profile-card .quotes {
   display: block;
   border-radius: 8px;
   position: relative;
-  background-color: #fafafa;
   padding: 65px 50px 35px 50px;
   font-size: 0.8em;
   font-weight: 500;
   margin: -40px 0 0;
   line-height: 1.6em;
   box-shadow: 0 0 5px rgba(0, 0, 0, 0.15);
+}
+
+.dark figure.quotes-profile-card .quotes {
+  background-color: #fafafa;
+}
+
+.light figure.quotes-profile-card .quotes {
+  background-color: #040404;
 }
 
 figure.quotes-profile-card .quotes:before,
@@ -88,7 +102,14 @@ figure.quotes-profile-card .author h5 {
   bottom: 50%;
   margin: 0;
   font-weight: 800;
+}
+
+.dark figure.quotes-profile-card .author h5 {
   color: #ffffff;
+}
+
+.light figure.quotes-profile-card .author h5 {
+  color: var(--light-text-color);
 }
 
 figure.quotes-profile-card .author h5::before,
@@ -98,7 +119,14 @@ figure.quotes-profile-card .author h5::after {
 
 figure.quotes-profile-card .author span {
   font-size: 0.8em;
-  color: #000000;
   top: 50%;
   font-weight: 500;
+}
+
+.dark figure.quotes-profile-card .author span {
+  color: #000;
+}
+
+.dark figure.quotes-profile-card .author span {
+  color: #fff;
 }
